--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.HomePageFragment">
+    tools:context=".AdminFragment.AdminHomeFragment">
 
     <TextView
-        android:id="@+id/title_Lbl"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:text="@string/menu_homepage" />
-
+        android:layout_gravity="center"
+        android:text="@string/ic_home" />
 </FrameLayout>
