- Added MealPlan Fragment - Added HomePage Fragment

--- a/app/src/main/res/layout/fragment_meal_plan.xml
+++ b/app/src/main/res/layout/fragment_meal_plan.xml
@@ -1,14 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.MealPlanFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/menu_mealPlan" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/layout_bg3">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="15dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/lbl_mealPlanWeek"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/mealPlanWeek"
+                android:textSize="20sp" />
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="257dp"
+                android:layout_marginTop="5dp"
+                android:background="#FFFFFF"
+                android:fillViewport="false">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/RecyclerView_mealPlan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:listitem="@layout/meal_plan_items" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.core.widget.NestedScrollView>
+
+            <TextView
+                android:id="@+id/lbl_weeklyCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="@string/WeeklyCalories"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_weeklyCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#9C5454"
+                android:fontFamily="sans-serif-black"
+                android:textColor="#301307"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/lbl_monthlyCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="@string/MonthlyCalories"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_monthlyCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#9C5454"
+                android:fontFamily="sans-serif-black"
+                android:textColor="#301307"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
