--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,13 @@
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/top_menu"
                 app:title="EatHeal"
-                app:titleCentered="true" />
-
+                app:titleCentered="true">
+                <Button
+                    android:id="@+id/changeRoleBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/changeRole"/>
+            </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -38,11 +43,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topNav">
 
-        <Button
-            android:id="@+id/changeRoleBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/changeRole" />
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
