--- a/app/src/main/res/layout/recommendation_items.xml
+++ b/app/src/main/res/layout/recommendation_items.xml
@@ -91,3 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp" />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
