--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/belgrano</item>
         <item>@font/bungee_inline</item>
+        <item>@font/nunito_sans</item>
+        <item>@font/nunito_sans_bold</item>
         <item>@font/rowdies</item>
     </array>
 </resources>
