--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,19 +7,19 @@
         android:icon="@drawable/chat"
         android:title="@string/menu_recommendation" />
     <item
-        android:id="@+id/menu_mealPlan"
-        android:icon="@drawable/dinner"
-        android:title="@string/menu_mealPlan" />
-    <item
         android:id="@+id/menu_homepage"
         android:icon="@drawable/ic_home"
         android:title="@string/menu_homepage" />
     <item
-        android:id="@+id/menu_menu"
-        android:icon="@drawable/menu"
-        android:title="@string/menu_menu" />
-    <item
-        android:id="@+id/menu_cart"
-        android:icon="@drawable/cart"
-        android:title="@string/menu_cart" />
+        android:id="@+id/menu_mealPlan"
+        android:icon="@drawable/dinner"
+        android:title="@string/menu_mealPlan" />
+<!--    <item-->
+<!--        android:id="@+id/menu_menu"-->
+<!--        android:icon="@drawable/menu"-->
+<!--        android:title="@string/menu_menu" />-->
+<!--    <item-->
+<!--        android:id="@+id/menu_cart"-->
+<!--        android:icon="@drawable/cart"-->
+<!--        android:title="@string/menu_cart" />-->
 </menu>
